.provarCaches/00D410000011HE0EAM/objects/DOX__Document_Job__c.object
<CustomObject>
    <fields>
        <fullName>DOX__Additional_Rec_Linkage_Status__c</fullName>
        <description>Status of Printed file attaching to additional records.</description>
        <inlineHelpText>Status of Printed file attaching to additional records.</inlineHelpText>
        <label>Merged linkage Status for additional Rec</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOX__Additional_Rec_Linkage_Staus__c</fullName>
        <description>Status of Printed file attaching to additional records.</description>
        <inlineHelpText>Status of Printed file attaching to additional records.</inlineHelpText>
        <label>Merged linkage Status for additional Rec</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOX__Application__c</fullName>
        <label>Application</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Attachment_Name__c</fullName>
        <label>Attachment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Bulk_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Template</label>
        <referenceTo>DOX__Bulk_Job__c</referenceTo>
        <relationshipLabel>Document Jobs</relationshipLabel>
        <relationshipName>Document_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOX__Child_Object_Name__c</fullName>
        <label>Child Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Dataload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dataload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Template</label>
        <referenceTo>DOX__Template__c</referenceTo>
        <relationshipLabel>Document Jobs</relationshipLabel>
        <relationshipName>Document_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOX__Email_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Operation__c</fullName>
        <label>Operation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Parent_Field_Name__c</fullName>
        <label>Parent Field Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Parent_Object_Id__c</fullName>
        <label>Parent Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Parent_Object_Name__c</fullName>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Record_Ids_for_merged_File_linkage__c</fullName>
        <description>Additional Record Id(s) for File linkage</description>
        <inlineHelpText>Additional Record Id(s) for File linkage</inlineHelpText>
        <label>Record Id(s) for merged File linkage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOX__Records_To_Process__c</fullName>
        <description>List of records to process - used for multiple records merge.</description>
        <label>Records To Process</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOX__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOX__Upload_Parent_And_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Parent And Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__additional_Email_Ids__c</fullName>
        <description>Email Ids provided under this field will be used to Send Email after completion of Print.</description>
        <inlineHelpText>Email Ids provided under this field will be used to Send Email after completion of Print.</inlineHelpText>
        <label>Additional Email IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOX__attachDocAsFile__c</fullName>
        <formula>DOX__Document_Template__r.DOX__rootFormDocFormat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attach Document as File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__docAsFile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZZZZZ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__emailStatus__c</fullName>
        <description>Display Email Ids which is used to Send attachment.</description>
        <inlineHelpText>Display Email Ids which is used to Send attachment.</inlineHelpText>
        <label>Email Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DOX__multipleAttachmentIDs__c</fullName>
        <description>Multiple Attachment IDs for Bulk Merge and Print Multiple Operation.</description>
        <inlineHelpText>Multiple Attachment IDs for Bulk Merge and Print Multiple Operation.</inlineHelpText>
        <label>Multiple Attachment IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOX__sendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, and there are ‘Additional Email IDs’ populated for this Document Job, initiates the emailing of merged documents to email addresses provided.</description>
        <inlineHelpText>When checked, and there are ‘Additional Email IDs’ populated for this Document Job, initiates the emailing of merged documents to email addresses provided.</inlineHelpText>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Job</label>
    <listViews>
        <fullName>All_PK</fullName>
        <columns>NAME</columns>
        <columns>DOX__Application__c</columns>
        <columns>DOX__Operation__c</columns>
        <columns>DOX__Status__c</columns>
        <columns>DOX__Email_Document__c</columns>
        <columns>DOX__Document_Template__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DOX__Dataload__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_PK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DOX__All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>DOX__Attachment_Id__c</columns>
        <columns>DOX__Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>DOX__Records_To_Process__c</columns>
        <columns>DOX__attachDocAsFile__c</columns>
        <columns>DOX__Document_Template__c</columns>
        <columns>DOX__Application__c</columns>
        <columns>DOX__Email_Document__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DOX__emailStatus__c</columns>
        <columns>DOX__Additional_Rec_Linkage_Status__c</columns>
        <columns>DOX__Additional_Rec_Linkage_Staus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DOX__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Details</fullName>
        <columns>NAME</columns>
        <columns>DOX__Application__c</columns>
        <columns>DOX__Operation__c</columns>
        <columns>DOX__Parent_Object_Name__c</columns>
        <columns>DOX__Status__c</columns>
        <columns>DOX__Email_Document__c</columns>
        <columns>DOX__Document_Template__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DOX__Dataload__c</columns>
        <columns>DOX__Job_Id__c</columns>
        <columns>DOX__emailStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOX__Parent_Object_Name__c</field>
            <operation>equals</operation>
            <value>rstkf__ap1099year__c</value>
        </filters>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Document_Jobs_Today</fullName>
        <columns>NAME</columns>
        <columns>DOX__Application__c</columns>
        <columns>DOX__Operation__c</columns>
        <columns>DOX__Parent_Object_Name__c</columns>
        <columns>DOX__Status__c</columns>
        <columns>DOX__Email_Document__c</columns>
        <columns>DOX__Document_Template__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DOX__Dataload__c</columns>
        <columns>DOX__Job_Id__c</columns>
        <columns>DOX__emailStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Document Jobs Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RFDEMO</fullName>
        <columns>NAME</columns>
        <columns>DOX__Application__c</columns>
        <columns>DOX__Operation__c</columns>
        <columns>DOX__Parent_Object_Name__c</columns>
        <columns>DOX__Status__c</columns>
        <columns>DOX__Email_Document__c</columns>
        <columns>DOX__Document_Template__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DOX__Dataload__c</columns>
        <columns>DOX__Job_Id__c</columns>
        <columns>DOX__emailStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOX__Document_Template__c</field>
            <operation>contains</operation>
            <value>SO Invoice Template RFDEMO</value>
        </filters>
        <label>RFDEMO</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DJ-{000000000}</displayFormat>
        <label>Document Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>